k8s/pooled-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pooled-app
  namespace: pooling-poc
  labels:
    app: pooled-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pooled-app
  template:
    metadata:
      labels:
        app: pooled-app
    spec:
      containers:
        - name: pooled-app
          image: ${ECR_REPO_POOLED}:${IMAGE_TAG}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 600
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  name: pooled-app
  namespace: pooling-poc
spec:
  selector:
    app: pooled-app
  ports:
    - port: 80
      targetPort: 3000
