k8s/unpooled-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: unpooled-app
  namespace: pooling-poc
  labels:
    app: unpooled-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: unpooled-app
  template:
    metadata:
      labels:
        app: unpooled-app
    spec:
      containers:
        - name: unpooled-app
          image: ${ECR_REPO_UNPOOLED}:${IMAGE_TAG}
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 600
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 30
            periodSeconds: 60
---
apiVersion: v1
kind: Service
metadata:
  name: unpooled-app
  namespace: pooling-poc
spec:
  selector:
    app: unpooled-app
  ports:
    - port: 80
      targetPort: 3000
