k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pooling-poc-ingress
  namespace: pooling-poc
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  rules:
    - http:
        paths:
          - path: /pooled
            pathType: Prefix
            backend:
              service:
                name: pooled-app
                port:
                  number: 80
          - path: /unpooled
            pathType: Prefix
            backend:
              service:
                name: unpooled-app
                port:
                  number: 80
